# modelo_operaciones_pago

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: columnas_modelo_lr.pkl  modelo_logistic_regression.pkl
notebooks/: 01_pre_procesamiento_datos.ipynb  03_entrenamiento_modelo.ipynb  04_generacion_predicciones.ipynb
references/: Metadata.xlsx
utils/: functions.ipynb
